# stats

./: .gitlab-ci.yml  .travis.yaml  CMakeLists.txt  Readme.md
benchmarks/: CMakeLists.txt  max_bench.cpp  mean_bench.cpp  median_bench.cpp  min_bench.cpp  stddev_bench.cpp  var_bench.cpp
example/exam/: CMakeLists.txt  README.md  main.cpp
example/exam/data/: exams_10.csv  exams_100.csv  exams_1000.csv
include/: bootstrap.hpp  chess.hpp  interpolation.hpp  ranking.hpp  stats.hpp
test/: CMakeLists.txt  bootstrap_test.cpp  chess_test.cpp  interpolation_test.cpp  ranking_test.cpp  stats_test.cpp
